--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <script src="js/jquery-3.2.1.min.js"></script>
 
-        <script type="text/javascript" src="js/tweenmax.js"></script>
+        <script type="text/javascript" src="js/tweenmax01.js"></script>
 
         <script type="text/javascript" src="js/ScrollMagic.min.js"></script>
         <script type="text/javascript" src="js/animation.gsap.min.js"></script>
