--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
 
                 <div class="content">
                     <div>
-                        <div class="small">2017 - NOW</div>
+                        <div class="small">2018 - NOW</div>
+                        <h2>前端工程師</h2>
+                        <p>孚創雲端</p>
+                        <br/><br/>
+                        <div class="small">2017 - 2018</div>
                         <h2>WEB/APP前端工程師養成班</h2>
                         <p>中央大學資策會</p>
                         <br/><br/>
