--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <!-- <h1>FRONT-END ENGINEER</h1> -->
                     <div class="small"><em>我是一個</em></div>
                     <div class="typeBackground"><h1>前端工程師</h1></div>
-                    <p>如果我能在計算波函數密度且測不準的世界完成學分畢業，<br>那麼我便有足夠的自信完成前端領域的挑戰。</p>
+                    <p>如果我能在計算波函數密度且測不準的世界完成學分畢業<br>那麼我便有足夠的自信完成前端領域的挑戰</p>
                 </div>
             </div>
             <div id="particles-js"></div>           
@@ -62,10 +62,10 @@
                     <div>
                         <h2>羅芳財 adam_Lo</h2>
                         <p>
-                           原本是一個在半導體業工作的理工人，<br/>
-                            因為理解到將來的社會需要的是多元能力的人才，<br/>便下定決心前往資策會進行為期半年的前端工程師進修‧<br/>
-                            這段期間學習了網頁相關前後端課程，<br/>而最後也藉由所學之課程內容完成了個人靜態網站之架設以及專題成果展‧<br/>
-                            而在學習的過程中深深發覺寫code的樂趣，<br/>按照邏輯一步一步推演到最後畫面順利地呈現非常令人感到興奮，<br/>覺得這樣的過程十分令人著迷‧
+                           原本是一個在半導體業工作的理工人<br/>
+                            因為理解到將來的社會需要的是多元能力的人才<br/>便下定決心前往資策會進行為期半年的前端工程師進修<br/>
+                            這段期間學習了網頁相關前後端課程<br/>而最後也藉由所學之課程內容完成了個人靜態網站之架設以及專題成果展<br/>
+                            而在學習的過程中深深發覺寫code的樂趣<br/>按照邏輯一步一步推演到最後畫面順利地呈現非常令人感到興奮<br/>覺得這樣的過程十分令人著迷
                         </p>
 
                     </div>
