--- a/index.html
+++ b/index.html
@@ -405,11 +405,11 @@
                         </div>
 
 
-                        <div class="dual-col img-col">
+                        <!-- <div class="dual-col img-col">
                             <a target="_blank" href="https://drive.google.com/file/d/17MBK8knaR6Kbnvq5IMhbX9yuJJcG2lq5/view?usp=sharing"><img src="img/resume.png"></a>
                             <a target="_blank" href="https://drive.google.com/file/d/17MBK8knaR6Kbnvq5IMhbX9yuJJcG2lq5/view?usp=sharing"><h2>RESUME</h2></a>
                             <div class="tag">Photoshop</div>
-                        </div>
+                        </div> -->
                         
 
                       
